<resources>
    <string name="hint_expansion_id">Expansion ID</string>
    <string name="hint_expansion">Expansion</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Expansion not saved because it is empty.</string>
    <string name="app_name">Deep Madness Companion</string>
    <string name="newGameButton">New Game</string>
    <string name="settingsButton">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="expansions_tab">Expansions</string>
    <string name="epic_tab">Epic Monsters</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>


    <!-- Checkboxes for expansions and epic monsters -->
    <string name="expUncounted">Uncounted Horrors</string>
    <string name="expEndless">Endless Nightmares</string>
    <string name="expRise">Rise of Dagon</string>
    <string name="expOracle">The Oracle\'s Betrayal</string>
    <string name="expFaces">The Faces of the Sphere</string>

    <string name="epicSpawn">Spawn of the Sleeper</string>
    <string name="epicPenitent">Penitent and Forsaken</string>
    <string name="epicInsidious">Insidious</string>
    <string name="epicDevourer">Devourer of Worlds</string>
    <string name="epicDimension">Dimension Rift</string>
    <string name="epicDrifter">The Drifter King</string>
    <string name="title_expansion_list">Expansions</string>
    <string name="title_expansion_detail">Expansion Detail</string>

    <string name="scenarioLabel">Scenario:</string>
    <string name="characterLabel">Characters:</string>
    <string name="monsterLabel">Monsters:</string>
    <string name="summaryText">You are now ready to start the game! Below are your selections, if they are good, then
        click next, otherwise you can go back and change them.
    </string>
    <string name="finishedButton">Finished</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="historyButton">History</string>
    <string name="historyText">Here you can see a history of every time you\'ve used this app. If, for some reason, you
        ever wanted to do that.
    </string>
    <string name="monsterInstructions">Choose six monsters</string>
    <string name="characterInstructions">Choose between four and six characters</string>
    <string name="scenarioInstructions">Choose a scenario</string>
    <string name="expansionInstructions">Choose expansions to include</string>
    <string name="historyIdText">Id</string>
    <string name="historyDateText">Date</string>
    <string name="historyLocationText">Lat/Long</string>
    <string name="historyScenarioText">Scenario</string>
    <string name="diceRollerButton">Dice Roller</string>
    <string name="diceSelectText">Select how many dice to roll, and then shake the phone to roll.</string>
    <string name="radioDice1">1 Die</string>
    <string name="radioDice2">2 Dice</string>
    <string name="radioDice3">3 Dice</string>
    <string name="radioDice4">4 Dice</string>
    <string name="radioDice5">5 Dice</string>
    <string name="radioDice6">6 Dice</string>
</resources>
