<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".views.ui.fragments.DiceFragment"
                                                   android:id="@+id/constraintLayout">
    <TextView
            android:text="@string/diceSelectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.06999999"/>
    <RadioGroup
            android:layout_width="113dp"
            android:layout_height="198dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.01999998"
            app:layout_constraintHorizontal_bias="0.03" android:id="@+id/diceGroup">
        <RadioButton
                android:text="@string/radioDice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDice1" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/radioDice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDice2" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/radioDice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDice3" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/radioDice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDice4" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/radioDice5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDice5" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/radioDice6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/radioDice6" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resultDiceView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.75"/>
</androidx.constraintlayout.widget.ConstraintLayout>