<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.ui.fragments.SummaryFragment"
        android:id="@id/constraintLayout">

    <TextView
            android:id="@+id/summaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summaryText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>

    <TextView
            android:id="@+id/scenarioLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scenarioLabel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summaryText"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"/>

    <TextView
            android:id="@+id/scenarioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/summaryText"
            app:layout_constraintLeft_toLeftOf="@id/characterRecyclerView"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
    />

    <TextView
            android:id="@+id/labelCharacters"
            android:text="@string/characterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scenarioLabel"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/characterRecyclerView"
            tools:listitem="@layout/recyclerview_character_summary"
            app:layout_constraintTop_toTopOf="@id/labelCharacters"
            app:layout_constraintLeft_toRightOf="@id/labelCharacters"
            android:layout_marginStart="16dp"
    />

    <TextView
            android:id="@+id/labelMonsters"
            android:text="@string/monsterLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterRecyclerView"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
    />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/monsterRecyclerView"
            tools:listitem="@layout/recyclerview_monster_summary"
            app:layout_constraintTop_toTopOf="@id/labelMonsters"
            app:layout_constraintLeft_toLeftOf="@id/characterRecyclerView"
    />

    <Button
            android:id="@+id/finishedButton"
            android:text="@string/finishedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>