<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".views.ui.fragments.MainFragment"
                                                   android:id="@+id/constraintLayout"
                                                   android:background="@drawable/dm">
    <Button
            android:text="@string/newGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/newGameButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/diceRollerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/diceRollerButton"
            app:layout_constraintTop_toBottomOf="@id/newGameButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
            android:text="@string/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/historyButton"
            app:layout_constraintTop_toBottomOf="@id/diceRollerButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            style="@style/Widget.AppCompat.Button.Colored"/>

</androidx.constraintlayout.widget.ConstraintLayout>