<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/constraintLayout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/recycler_list_item"
            android:id="@+id/historyIdView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/historyDateView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/recycler_list_item"
            android:id="@+id/historyDateView"
            app:layout_constraintStart_toStartOf="@+id/historyIdView"
            app:layout_constraintTop_toBottomOf="@+id/historyIdView"
            app:layout_constraintBottom_toTopOf="@+id/historyLocationView"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/recycler_list_item"
            android:id="@+id/historyLocationView"
            app:layout_constraintStart_toStartOf="@+id/historyDateView"
            app:layout_constraintTop_toBottomOf="@+id/historyDateView"
            app:layout_constraintBottom_toTopOf="@+id/historyScenarioId"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/recycler_list_item"
            android:id="@+id/historyScenarioId"
            app:layout_constraintStart_toStartOf="@+id/historyLocationView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historyLocationView"/>
    <TextView
            android:text="@string/historyIdText"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView2" app:layout_constraintTop_toTopOf="@+id/historyIdView"
    />
    <TextView
            android:text="@string/historyDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <TextView
            android:text="@string/historyLocationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/historyScenarioText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>